--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fontsource/noto-sans": "^5.2.7",
+    "@fontsource/noto-sans-thai": "^5.2.6",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/vue-fontawesome": "^3.1.1",
