--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/vue-fontawesome": "^3.1.1",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "pinia": "^3.0.3",
