--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "leaflet-draw": "^1.0.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
+    "vue-leaflet": "^0.1.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
