--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.11.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "leaflet-snap": "^0.0.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-leaflet": "^0.1.0",
