--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@fontsource/noto-sans": "^5.2.7",
     "@fontsource/noto-sans-thai": "^5.2.6",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/vue-fontawesome": "^3.1.1",
     "@tailwindcss/vite": "^4.1.12",
