--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/leaflet": "^1.9.20",
     "@types/leaflet-draw": "^1.0.12",
     "@types/node": "^22.16.5",
+    "@types/supertest": "^6.0.3",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/eslint-plugin": "^1.3.4",
     "@vue/eslint-config-prettier": "^10.2.0",
@@ -54,6 +55,7 @@
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
