--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/leaflet-draw": "^1.0.12",
     "@types/node": "^22.16.5",
     "@types/supertest": "^6.0.3",
+    "@types/web-bluetooth": "^0.0.21",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/eslint-plugin": "^1.3.4",
     "@vue/eslint-config-prettier": "^10.2.0",
